try to fix page not showing

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .result {
-  background-color:#A2DBFA;
+  background-color: #a2dbfa;
   padding: 1.5rem;
   margin-left: 5rem;
   margin-right: 5rem;
@@ -34,7 +34,7 @@
 .result p {
   font-size: 16px;
   font-weight: bold;
-  padding-left: .5rem;
+  padding-left: 0.5rem;
 }
 
 .result-item {
